worked on footer section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
   </section>
   <footer>
-    <p>copyright © ThoughtfulPonder</p>
+    <p class="copyright">copyright © ThoughtfulPonder</p>
   </footer>
 </body>
 
