worked on my projects section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class="nav-section">
           <li class="nav-link logo">ThoughtfulPonder</li>
           <li class="nav-link"><a href="#projects-section">Projects</a></li>
-          <li class="nav-link"><a href="#testimonies">Testimonies</a></li>
+          <li class="nav-link"><a href="#testimonies">Testimonials</a></li>
           <li class="nav-link"><a href="#contact-me">Get in Touch</a></li>
         </ul>
       </nav>
@@ -39,25 +39,25 @@
           <a href="#">
             <img src="" alt="project-image" />
           </a>
-          <p class="project-subtitle"></p>
+          <p class="project-subtitle">my fictional project</p>
         </div>
         <div class="project-link">
           <a href="#">
             <img src="" alt="project-image" />
           </a>
-          <p class="project-subtitle"></p>
+          <p class="project-subtitle">my fictional project</p>
         </div>
         <div class="project-link">
           <a href="#">
             <img src="" alt="project-image" />
           </a>
-          <p class="project-subtitle"></p>
+          <p class="project-subtitle">my fiction project</p>
         </div>
         <div class="project-link">
           <a href="#">
             <img src="" alt="project-image" />
           </a>
-          <p class="project-subtitle"></p>
+          <p class="project-subtitle">my fictional project</p>
         </div>
       </div>
     </div>
