start working on testimonials sections

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
   <section id="testimonies">
     <div class="testimonies-content">
       <h2 class="testimonial-heading">Clients testimonials</h2>
-      <p class="clients-testimonies">Working with ThoughtfulPonder was a fantastic experience. He quickly understood our requirements and delivered a clean, responsive website that looked great on all devices. His attention to detail and clear communication made the whole process smooth and stress-free. Highly recommended!"</p>
+      <p class="clients-testimonies">Working with ThoughtfulPonder was a fantastic experience. He quickly understood our
+        requirements and delivered a clean, responsive website that looked great on all devices. His attention to detail
+        and clear communication made the whole process smooth and stress-free. Highly recommended!"</p>
     </div>
   </section>
   <section id="contact-me">
