worked on contact section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   </section>
   <section id="testimonies">
     <div class="testimonies-content">
-      <h2 class="testimonial-heading">Clients testimonials</h2>
+      <!--
+      <h2 class="testimonial-heading">Clients testimonials</h2> -->
       <p class="clients-testimonies">Working with ThoughtfulPonder was a fantastic experience. He quickly understood our
         requirements and delivered a clean, responsive website that looked great on all devices. His attention to detail
         and clear communication made the whole process smooth and stress-free. Highly recommended!"</p>
@@ -72,8 +73,10 @@
   </section>
   <section id="contact-me">
     <div class="contact-me-content">
-      <h2 class="">Let’s Work Together</h2>
-      <p>Have a project in mind or need help with your website? I’d love to hear from you.</p>
+      <div class="contact-heading">
+        <h2 class="">Let’s Work Together</h2>
+        <p>Have a project in mind or need help with your website? I’d love to hear from you.</p>
+      </div>
       <button class="btn" type="submit">Get in Touch</button>
     </div>
   </section>
