worked on contact section and fixed footer section
worked and refined contact section of landing page and fixed footer not covering bottom of webpage by setting max-height: 100vh; from previous min-heght: 100vh;

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <title>ThoughtfulPonder</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -24,7 +28,7 @@
       <div class="hero-heading">
         <h1 class="hero-title">Hi i'am ThoughtfulPonder</h1>
         <p class="hero-subtitle">i am Passionate about building websites that are fast, simple, and effective.</p>
-        <button class="btn" type="submit">Get in Touch</button>
+        <button class="btn" type="button">Get in Touch</button>
       </div>
       <div class="hero-image">
         <img src="./assets/images/hero-image.png" alt="hero-image" />
