worked on contact section and project section
completed contact section design to match it design as good as possible, completed project section frames so worked as design intented with and without any images in them.

--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
       <div class="project-lists">
         <div class="project-link">
           <a href="#">
-            <img src="" alt="project-image" />
+            <img src="" alt="" />
           </a>
           <p class="project-subtitle">my fictional project</p>
         </div>
         <div class="project-link">
           <a href="#">
-            <img src="" alt="project-image" />
+            <img src="" alt="" />
           </a>
           <p class="project-subtitle">my fictional project</p>
         </div>
         <div class="project-link">
           <a href="#">
-            <img src="" alt="project-image" />
+            <img src="" alt="" />
           </a>
           <p class="project-subtitle">my fiction project</p>
         </div>
         <div class="project-link">
           <a href="#">
-            <img src="" alt="project-image" />
+            <img src="" alt="" />
           </a>
           <p class="project-subtitle">my fictional project</p>
         </div>
