changed testimonials section to about me
changed testimonials section to about me section to better reflect my mockup landing page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="nav-section">
           <li class="nav-link logo">ThoughtfulPonder</li>
           <li class="nav-link"><a href="#projects-section">Projects</a></li>
-          <li class="nav-link"><a href="#testimonies">Testimonials</a></li>
+          <li class="nav-link"><a href="#about-me">About Me</a></li>
           <li class="nav-link"><a href="#contact-me">Get in Touch</a></li>
         </ul>
       </nav>
@@ -66,13 +66,21 @@
       </div>
     </div>
   </section>
-  <section id="testimonies">
-    <div class="testimonies-content">
-      <!--
-      <h2 class="testimonial-heading">Clients testimonials</h2> -->
-      <p class="clients-testimonies">Working with ThoughtfulPonder was a fantastic experience. He quickly understood our
-        requirements and delivered a clean, responsive website that looked great on all devices. His attention to detail
-        and clear communication made the whole process smooth and stress-free. Highly recommended!"</p>
+  <section id="about-me">
+    <div class="about-me-content">
+      <h2 class="about-me-heading">About Me</h2>
+      <div class="about-me-destription">
+        <p>Hi, I’m <strong>ThoughtfulPonder</strong>, a frontend web developer passionate about building
+          clean, responsive, and user-friendly websites. I enjoy turning ideas into functional web experiences with the
+          help of
+          HTML, CSS, and JavaScript, and I’m continuously learning modern frameworks and tools to grow my skills.</p>
+        <p>I believe in writing code that is not only efficient but also easy to maintain. My
+          focus is always on creating
+          smooth user experiences and practical solutions that help clients achieve their goals.</p>
+        <p>When I’m not coding, I enjoy exploring new technologies, improving my
+          problem-solving skills, and pushing myself
+          to become a better developer every day.</p>
+      </div>
     </div>
   </section>
   <section id="contact-me">
